# LegacyLens

./: .dockerignore  .env.example  .gitignore  Dockerfile  POSTMORTEM.md  README.md  presentation.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: evals.yml
app/: cli.py  config.py  main.py  services.py  tui.py
app/features/: dependencies.py  docgen.py  explain.py  impact.py  metrics.py  patterns.py  routine_lookup.py
app/ingestion/: call_graph.py  chunker.py  embedder.py  loader.py  scanner.py
app/retrieval/: bm25_index.py  context.py  generator.py  router.py  search.py
backend/: .env.example  Dockerfile  Procfile  pyproject.toml  requirements.txt
backend/app/: cli.py  config.py  main.py  services.py
backend/data/: embed_checkpoint.json  eval_results.json
data/: call_graph.json
docs/: AI_COST_ANALYSIS.md  ARCHITECTURE_DEEP_DIVE.md  DEEP_DIVE_PLAN.md  DEEP_DIVE_SUMMARY.md  EVALUATION.md  FEATURE_IDEAS.md  IMPLEMENTATION_PLAN.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_PROFILE.json  RAG_ARCHITECTURE.md  presearch.md
scripts/: download_spice.sh  profile_pipeline.py
static/: app.js  crt-debug.js  index.html  styles.css
tests/: eval_assert.py  eval_cases.json  eval_coverage.py  eval_harness.py  eval_schema.py  golden_outputs.json  model_comparison.py  test_api_endpoints.py  test_benchmarks.py  test_bm25.py  test_caching.py  test_context_assembly.py  test_conversation.py  test_eval_replay.py  test_eval_retrieval.py  test_eval_schema.py  test_golden_invariants.py  test_latency.py  test_regressions.py  test_router.py  test_tui.py
(+47 files in other folders)
